--- a/main.css
+++ b/main.css
@@ -11,6 +11,7 @@ p, h1 {
 h1 {
   text-align: center;
   font-size: 3em;
+  margin-top: 20px;
   padding: 30px;
   border-bottom: 3px solid white;
 }
@@ -48,4 +49,30 @@ textarea {
   border-radius: 8px;
   width: 100%;
   min-height: 150px;
+}
+
+.login {
+  background-color: inherit;
+  padding: 0;
+  border: none;
+}
+
+.modal-backdrop {
+  z-index: -1;
+}
+
+aside {
+  position: fixed;
+  padding: 10px 20px;
+  font-size: 2em;
+  border-radius: 40px;
+  bottom: 25px;
+  z-index: 5;
+  right: 15px;
+}
+
+.presentation-paragraphe {
+  max-height: 100px;
+  overflow: hidden;
+  margin-bottom: 0;
 }
